feat(1.20.1): downgrade from MC 1.21.1 to 1.20.1 (Forge/NeoForge/Fabric), drop datagen output & leaked tokens
- Port common code to 1.20.1 APIs: new ResourceLocation, 1.20.1 registries,
  AttributeModifier codec stand-ins (ChampionsCodecs), 1.20.1 dep line
  (Architectury 9.x, Cardinal 5.x, Fabric API 0.92.x, KubeJS 2001.6.x)
- Unify network packets in common/ (ChampionSyncPacket, TierSyncPacket,
  ClientTierCache); platforms keep only their handlers
- Add Forge module (forked from NeoForge: mods.toml, capability-based
  attachments, SimpleChannel, TOP integration); publishing targets :forge:*
- Keep the NeoForge module in-tree (unbuilt) to survive branch switches
- Remove accidentally committed datagen output (*/src/generated/resources,
  ~180 files) and ignore those trees; regenerate with runData
- Purge real Modrinth/CurseForge tokens from gradle.properties (use
  MODRINTH_TOKEN / CURSEFORGE_TOKEN env vars instead); tokens must be revoked
- Add MIGRATION_NOTES_1.20.1.md with the full migration summary